[tool.poetry]
name = "cyclerack-map"
version = "0.1.0"
description = ""
authors = ["None"]
packages = [{include = "cyclerack_map"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
psycopg2 = "^2.9.5"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
